data/derived/comb/progs/unify/prog8874.ml.out
Characters 86-99:
  else additivePersistence (sumList (digitsOfInt n + 1));;
                                     ^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
